<resources>
    <string name="app_name">myMinIODrive</string>
    <string name="new_to_drive">New to drive?</string>
    <string name="please_log_in">Please log in</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="search">Search...</string>
    <string name="space_used_vs_total_bucket_space">Space Used vs. Total Bucket Space</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="servers_location">Servers Location</string>
    <string name="cloud_buckets">Cloud Buckets</string>
    <string name="images_out_of_total_files">Images out of total files:</string>
</resources>